Update flatpak instructions, small tweaks - Update flatpak installation instructions to reflect KS:RE 2.0.4 changes - Fix credit icons being offset - Fix header buttons being slightly off-screen when viewed on certain mobile devices - Fix direct exe and rpa downloads opening unnecessary tab - Various tweaks to icons and text centering

--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,11 @@ a:hover {
     @apply font-monospace bg-back-dark;
 }
 .iconify {
-    @apply inline-block;
-    vertical-align: baseline;
+    @apply inline-block align-text-top;
     font-size: 1em;
+}
+.iconify.embed {
+    @apply align-baseline;
 }
 .fancybtn:hover svg {
     @apply text-back-light;
